# framework-core

./: .gitignore  README.md  main.py  pyproject.toml
core/: registry.py  test_connection.py
core/config/: config_loader_factory.py  loader.py
core/config/clients/: aws_client.py
core/config/loaders/: dynamo_loader.py  yaml_loader.py
core/connectors/vector_stores/: chroma.py  factory.py  qdrant.py  registry.py
core/interfaces/: base_executor.py  base_ingestor.py
core/interfaces/config/: config_loader.py
core/interfaces/data/: document.py  embedding.py
core/interfaces/store/: vector_store.py
core/models/: document.py  embedding.py
core/telemetry/: decorators.py  json_formatter.py  logger.py  text_formatter.py
core/tests/: test_document.py  test_embedding.py  test_vector_store_factory.py
core/types/: document.py  embedding.py
core/utils/: dynamodb.py  exceptions.py  helpers.py  logger.py
core/vector_store/: base_store.py  chroma_store.py
