[project]
name = "framework-core"
version = "0.1.0"
description = "core framework"
authors = [
    {name = "k-i-r-o-o",email = "raunakc6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
