[tool.poetry]
name = "framework-core"
version = "0.1.0"
description = "core framework"
authors = ["k-i-r-o-o <raunakc6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# 👇 This should be an array of tables
[[tool.poetry.packages]]
include = "core"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
